V1.4.2
=====
Added segulos
Added krawl vortex - only natural spawning krawl. spawns krawl in waves and drops minerals upon defeat
Made spectrobes drop their fossil upon death.
Fixed Komainu and Komanoto variant skins
Added segu and segulos variant skins.
Added Subar and Vizbar
Added Gris and Grisen
Added Harumite with colour variants

V1.4.1
======
Fixed spectrobe serializer not being registered in time
fixed shakor textures
removed open prizmod keybinding due to bug where using the key before using a prizmod item causes all spectrobes to be deleted from a player.
Fixed komanoto model
fixed spikan model

V1.4
=====
Updated Geckolib to 3.0. meaning better models and animations!
Krawl only attack players with an adult form in the top two slots of the prizmod line up
Added chroma minerals
Added chroma variants for komainu, komanoto, shakin, shakor.
Added Grilda and Grilden.
Added an extra state to spectrobes: searching. Cycle through the states with shift right click.
Added child forms searching for minerals and fossil ore blocks when in searching state
Added type advantage check when damaging krawl/spectrobes
Added Zoza and Zozane.

V1.3.2
======
Fixed chat messages being sent globally

V1.3.1
======
Fixed Segu fossil & vilar fossil using other fossil textures.
Fixed segu, shakin and vilar item names.

V1.3
=====

Refactored fossil definitions.
fossils and minerals are now used up upon right clicking.
fossils and minerals are now spawning in the world.
started defining krawl ingame, AI, Properties, Stats.
added swar.
added vilar, vilamasta, segu, shakin, shakor, kubaku, kuganon
Killed owned spectrobes now return to the prizmod instead of dying.
Prizmod now has a paging feature for viewing all your owned spectrobes.
krawl spawn at night in groups of 2-6.
fossils no longer spawn spectrobes, it will send it directly to your prizmod.
Spectrobes gain stats from defeating krawl.

Team lineup now persists for the duration of the session(until you leave the game).